--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -29,7 +29,7 @@
 }
 
 .logo {
-  border: 2px solid white;
+  border: 2px solid #1cb4a0;
   padding: 0 10px;
   margin-right: 16px;
   font-weight: 500;
