--- a/src/components/Search/index.css
+++ b/src/components/Search/index.css
@@ -4,11 +4,11 @@
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 30px;
   padding: 20px;
-  letter-spacing: 1px;
-  font-size: 18px;
+  font-size: 16px;
   outline: none;
   color: #fff;
   background-color: transparent;
+  font-family: "Poppins";
 }
 
 .searchWrapper {
