handle empty results

--- a/src/components/Tracks/index.css
+++ b/src/components/Tracks/index.css
@@ -65,3 +65,18 @@
   margin-bottom: 10px;
   width: 70%;
 }
+
+.empty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  line-height: 2;
+  width: 200%;
+  font-weight: lighter;
+  height: 50vh;
+  margin: auto;
+  border-radius: 12px;
+  font-size: 16px;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+}
