--- a/src/components/Lyrics/index.css
+++ b/src/components/Lyrics/index.css
@@ -13,7 +13,18 @@
   margin: auto;
   padding: 40px;
   border-radius: 20px;
-  border: 1px solid #fff;
+  border: 2px solid #fff;
+  transition-duration: 1s;
+}
+
+.lyricsWrapper:hover {
+  border: 2px solid #1cb4a0;
+  transition-duration: 1s;
+
+  .lyricsArtist {
+    transition-duration: 1s;
+    color: #1cb4a0;
+  }
 }
 
 .lyrics {
@@ -27,6 +38,7 @@
 
 .lyricsArtist {
   font-style: italic;
+  transition-duration: 1s;
 }
 
 .lyricsTrackName {
@@ -60,4 +72,44 @@
 .lyricsLine.skeleton {
   height: 30px;
   margin: 8px 0;
+}
+
+@media (max-width: 576px) {
+  .lyricsContainer {
+    margin-top: 100px;
+  }
+  .lyricsWrapper {
+    width: 90%;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+  .lyricsTrackName {
+    font-size: 1.5rem;
+  }
+
+  .lyrics {
+    margin-top: 20px;
+    font-size: 12px;
+    line-height: 1.5;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 768px) {
+  .lyricsContainer {
+    margin-top: 120px;
+  }
+  .lyricsWrapper {
+    width: 70%;
+    padding: 30px;
+    box-sizing: border-box;
+  }
+  .lyricsTrackName {
+    font-size: 2rem;
+  }
+
+  .lyrics {
+    margin-top: 30px;
+    font-size: 14px;
+    line-height: 1.5;
+  }
 }
