--- a/src/components/Search/index.css
+++ b/src/components/Search/index.css
@@ -9,9 +9,41 @@
   color: #fff;
   background-color: transparent;
   font-family: "Poppins";
+  transition-duration: 1s;
+}
+
+.inputSearch:hover {
+  border: 1px solid #1cb4a0;
+  transition-duration: 1s;
 }
 
 .searchWrapper {
   text-align: center;
   margin-bottom: 40px;
+}
+
+@media (max-width: 576px) {
+  .inputSearch {
+    height: 36px;
+    width: 75%;
+    padding: 12px;
+    font-size: 12px;
+  }
+
+  .searchWrapper {
+    margin-bottom: 20px;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 768px) {
+  .inputSearch {
+    height: 36px;
+    width: 75%;
+    padding: 16px;
+    font-size: 14px;
+  }
+
+  .searchWrapper {
+    margin-bottom: 20px;
+  }
 }
