--- a/src/components/Tracks/index.css
+++ b/src/components/Tracks/index.css
@@ -5,15 +5,26 @@
   margin: 40px auto;
   row-gap: 40px;
   place-items: center;
-  width: 75%;
 }
 
 .trackCard {
   border: 2px solid rgba(255, 255, 255, 0.5);
   padding: 16px 24px;
-  width: 440px;
+  width: 70%;
   height: 175px;
   border-radius: 12px;
+  transition-duration: 1s;
+}
+
+.trackCard:hover {
+  border: 2px solid #1cb4a0;
+  color: #1cb4a0;
+  transition-duration: 500ms;
+
+  .lyricsButton {
+    background-color: #1cb4a0;
+    transition-duration: 1500ms;
+  }
 }
 
 .trackArtist,
@@ -23,7 +34,7 @@
   gap: 4px;
   margin: 8px 0;
   font-size: 16px;
-  font-weight: lighter;
+  font-weight: 500;
 }
 
 .trackName {
@@ -57,6 +68,7 @@
   letter-spacing: 1px;
   outline: none;
   background-color: rgba(255, 255, 255, 0.3);
+  transition-duration: 1500ms;
 }
 
 .lyricsTrackName.skeleton {
@@ -64,4 +76,49 @@
   margin: auto;
   margin-bottom: 10px;
   width: 70%;
+}
+
+@media (max-width: 576px) {
+  .trackCardWrapper {
+    grid-template-columns: 1fr;
+    margin: 20px auto;
+    row-gap: 20px;
+    width: 100%;
+  }
+  .trackCard {
+    width: 70%;
+  }
+  .header {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 768px) {
+  .trackCardWrapper {
+    grid-template-columns: 1fr;
+    margin: 20px auto;
+    row-gap: 20px;
+    width: 100%;
+  }
+  .trackCard {
+    width: 50%;
+  }
+  .header {
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 769px) {
+  .trackCard {
+    width: 70%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .trackCardWrapper {
+    width: 80%;
+  }
+  .trackCard {
+    width: 440px;
+  }
 }
