--- a/src/components/Lyrics/index.css
+++ b/src/components/Lyrics/index.css
@@ -92,6 +92,9 @@
     font-size: 12px;
     line-height: 1.5;
   }
+  .copyRight {
+    font-size: 10px;
+  }
 }
 
 @media (min-width: 576px) and (max-width: 768px) {
