--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,16 +1,18 @@
 .home {
-  margin-top: 120px;
-  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 4% 0;
 }
 
-@media (max-width: 576px) {
+@media screen and (min-width: 768px) {
   .home {
-    margin-top: 100px;
+    gap: 32px;
   }
 }
 
-@media (min-width: 576px) and (max-width: 768px) {
+@media screen and (min-width: 1024px) {
   .home {
-    margin-top: 100px;
+    gap: 40px;
   }
 }
