--- a/src/components/Lyrics/index.css
+++ b/src/components/Lyrics/index.css
@@ -1,52 +1,40 @@
 .lyricsContainer {
-  margin-top: 120px;
-  margin-bottom: 50px;
-  position: relative;
   display: flex;
   flex-direction: column;
-  min-height: 80vh;
 }
 
 .lyricsWrapper {
-  color: #fff;
-  width: 50%;
+  width: min(80%, 700px);
   margin: auto;
-  padding: 40px;
-  border-radius: 20px;
-  border: 2px solid #fff;
-  transition-duration: 1s;
-}
-
-.lyricsWrapper:hover {
-  border: 2px solid #1cb4a0;
-  transition-duration: 1s;
+  padding: 4%;
 }
 
 .lyricsWrapper:hover .lyricsArtist {
-  transition-duration: 1s;
-  color: #1cb4a0;
-}
-
-.lyrics {
-  font-size: 16px;
-  line-height: 2;
-  margin-top: 40px;
-  white-space: pre-line;
-  text-align: center;
-  font-weight: lighter;
-}
-
-.lyricsArtist {
-  font-style: italic;
-  transition-duration: 1s;
-}
-
-.lyricsTrackName {
-  font-size: 2.5rem;
+  transition-duration: 500ms;
+  color: var(--secondary-color);
 }
 
 .lyricsInfo {
   text-align: center;
+}
+
+.lyricsTrackName {
+  font-size: 1.5rem;
+}
+
+.lyricsArtist {
+  transition-duration: 500ms;
+  font-size: 0.9rem;
+  font-style: italic;
+}
+
+.lyrics {
+  font-size: 0.8rem;
+  line-height: 2;
+  margin-top: 20px;
+  white-space: pre-line;
+  text-align: center;
+  font-weight: lighter;
 }
 
 .copyRight {
@@ -54,9 +42,8 @@
   justify-content: center;
   align-items: center;
   gap: 16px;
-  margin-top: 32px;
-  font-size: 14px;
-  font-weight: bold;
+  font-size: 0.75rem;
+  font-weight: 400;
 }
 
 .copyRightLogoWrapper {
@@ -74,45 +61,37 @@
   margin: 8px 0;
 }
 
-@media (max-width: 576px) {
-  .lyricsContainer {
-    margin-top: 100px;
-  }
-  .lyricsWrapper {
-    width: 90%;
-    padding: 20px;
-    box-sizing: border-box;
-  }
-  .lyricsTrackName {
-    font-size: 1.5rem;
-  }
-
-  .lyrics {
-    margin-top: 20px;
-    font-size: 12px;
-    line-height: 1.5;
-  }
-  .copyRight {
-    font-size: 10px;
-  }
-}
-
-@media (min-width: 576px) and (max-width: 768px) {
-  .lyricsContainer {
-    margin-top: 120px;
-  }
-  .lyricsWrapper {
-    width: 70%;
-    padding: 30px;
-    box-sizing: border-box;
-  }
+@media screen and (min-width: 768px) {
   .lyricsTrackName {
     font-size: 2rem;
   }
 
+  .lyricsArtist,
   .lyrics {
-    margin-top: 30px;
-    font-size: 14px;
-    line-height: 1.5;
+    font-size: 1rem;
+  }
+
+  .copyRight {
+    font-size: 0.9rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .lyricsTrackName {
+    font-size: 2.5rem;
+  }
+
+  .lyricsArtist,
+  .lyrics {
+    font-size: 1.15rem;
+  }
+
+  .noLyrics {
+    font-size: 1rem;
+
+    h1 {
+      font-size: 2.5rem;
+      margin: 0;
+    }
   }
 }
