--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -1,37 +1,33 @@
-.emptyWrapper {
+.errorWrapper {
+  /* min-height: 70vh; */
   display: flex;
-  justify-content: center;
   align-items: center;
-  color: #fff;
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  height: 50vh;
-  width: 65%;
-  margin: 40px auto;
-  text-align: center;
-  line-height: 2;
-  font-weight: lighter;
-  border-radius: 12px;
-  font-size: 16px;
-}
-
-.emptyWrapper span {
-  font-size: 18px;
-}
-
-@media (max-width: 576px) {
-  .emptyWrapper {
-    height: 40vh;
-    width: 80%;
-    margin: 20px auto;
-    font-size: 12px;
+  justify-content: center;
+  h1 {
+    margin: 0;
   }
 }
 
-@media (min-width: 576px) and (max-width: 768px) {
-  .emptyWrapper {
-    height: 60vh;
-    width: 80%;
-    margin: 20px auto;
-    font-size: 14px;
+.errorContent {
+  text-align: center;
+  font-weight: lighter;
+  font-size: 0.75rem;
+  line-height: 2;
+
+  h1 {
+    line-height: 1;
+    font-size: 1.5rem;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .errorContent {
+    font-size: 1rem;
+
+    h1 {
+      font-size: 2.5rem;
+      margin: 0;
+    }
   }
 }
