--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,13 @@
+:root {
+  --primary-color: white;
+  --secondary-color: #1cb4a0;
+}
+
 body {
   padding: 0;
   margin: 0;
   background-color: #191919;
+  color: var(--primary-color);
 }
 
 html {
@@ -30,5 +36,19 @@ html {
   100% {
     background-color: white;
     opacity: 0.3;
+  }
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
+  main {
+    flex: 1;
+  }
+
+  > * {
+    box-sizing: border-box;
   }
 }
