--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -1,5 +1,5 @@
 .errorWrapper {
-  /* min-height: 70vh; */
+  min-height: 60vh;
   display: flex;
   align-items: center;
   justify-content: center;
