--- a/src/components/Tracks/index.css
+++ b/src/components/Tracks/index.css
@@ -6,10 +6,11 @@
 
 .trackCardWrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(100%, 380px), 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(100%, 380px), 420px));
   gap: 20px;
   width: 80%;
   margin: auto;
+  place-content: center;
 }
 
 .trackCard {
@@ -105,6 +106,7 @@
   .trackCard .lyricsButton {
     height: 32px;
     font-size: 14px;
+    margin-top: 16px;
   }
 }
 
@@ -114,7 +116,6 @@
   }
 
   .trackCardWrapper {
-    width: 75%;
     gap: 40px;
   }
 }
